--- a/android/src/main/res/layout/rectangle_marker.xml
+++ b/android/src/main/res/layout/rectangle_marker.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/rectangle_test"
         android:layout_centerHorizontal="true"
-        android:text=""
+        android:text="Hello There"
         android:padding="10dp"
         android:gravity="center"
         android:textSize="12sp"
