--- a/android/src/main/res/layout/rectangle_marker.xml
+++ b/android/src/main/res/layout/rectangle_marker.xml
@@ -9,14 +9,13 @@
         android:id="@+id/rectangle_tvContent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/rectangle_test"
+        android:background="@drawable/rectangle_marker"
         android:layout_centerHorizontal="true"
-        android:text="Hello There"
+        android:text=""
         android:padding="5dp"
         android:gravity="center"
         android:textSize="12sp"
         android:textColor="@android:color/black"
         android:textAppearance="?android:attr/textAppearanceSmall"
     />
-
 </RelativeLayout>
