--- a/android/src/main/res/layout/highlight_marker.xml
+++ b/android/src/main/res/layout/highlight_marker.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/rectangle_test"
         android:layout_centerHorizontal="true"
-        android:text="Primary"
+        android:text=""
         android:padding="5dp"
         android:gravity="center"
         android:textSize="12sp"
@@ -25,9 +25,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/rectangle_test"
         android:layout_centerHorizontal="true"
-        android:text="Secondary"
+        android:text=""
         android:padding="5dp"
-        android:textStyle="bold"
         android:gravity="center"
         android:textSize="12sp"
         android:textColor="@android:color/black"
