--- a/android/src/main/res/layout/highlight_marker.xml
+++ b/android/src/main/res/layout/highlight_marker.xml
@@ -12,6 +12,7 @@
         android:background="@drawable/rectangle_test"
         android:paddingVertical="5dp"
         android:paddingHorizontal="10dp"
+        android:layout_marginBottom="5dp"
         >
         <TextView
             android:id="@+id/highlight_label_secondary"
