--- a/android/src/main/res/layout/highlight_marker.xml
+++ b/android/src/main/res/layout/highlight_marker.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="asdasd"
+            android:text=""
             android:layout_marginRight="5dp"
             android:layout_marginEnd="5dp"
             android:gravity="center"
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="asdasd"
+            android:text=""
             android:gravity="center"
             android:textSize="12sp"
             android:textColor="@android:color/black"
